k8s/03-gateway-tier2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: student-api-gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: student-api-route
spec:
  parentRefs:
    - name: student-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/students
      backendRefs:
        - name: student-api-svc
          port: 8085
    - matches:
        - path:
            type: PathPrefix
            value: /healthcheck
      backendRefs:
        - name: student-api-svc
          port: 8085
