k8s/04-ingress-tier1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-api-ingress
  namespace: envoy-gateway-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: envoy-default-student-api-gateway-2a57d4fd
                port:
                  number: 80
